[package]
name = "godot_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".","examples/basic/rust"
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
bevy_ecs = { version = "0.11.2" , features = ["default"] }
bevy_utils = "0.11.2"
bevy_asset = "0.11.2"

[features]
full = ["3d", "2d"]
3d = []
2d = []
