[package]
name = "godot_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
bevy = { version = "0.11.2", default-features = false, features = ["bevy_asset", "multi-threaded", "serialize", "trace"] }

[features]
full = ["3d", "2d"]
3d = []
2d = []
