[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "basic_example"
crate-type = ["cdylib", "lib"]

[dependencies]
bevy_ecs = { version = "0.11.2", features = ["default"] }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
godot_ecs = { path = "../../../", features = ["full"]}
